# blitx3d_linux

./: .gitignore  .gitmodules  ANALISI_APPLICATIVO.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CUBEMAP_REFERENCE.txt  DEBUG_CUBEMAP_REPORT.txt  ISTRUZIONI_COMPILAZIONE.md  Makefile  OPENGL_OPTIMIZATIONS.md  README.md  TODO_IMPROVEMENTS.md  gcc_backend_todo.txt  oop_implementations.txt
_release/: blitz3d.sh
_release/Games/wing_ring/: wing_ring.bb
_release/help/commands/: command_list_3d_a-z.htm
_release/samples/: test_pixel_collision.bb
_release/samples/AGore/BirdDemo/: BirdDemo.bb
_release/samples/AGore/GrassDemo/: Grass.bb
_release/samples/AGore/HeadDemo/: TheHead.bb
_release/samples/Hi-Toro/Death Island/: deathisland.bb
_release/samples/MattDavey/Matts Balls/: bouncey.bb
_release/samples/Richard_Betson/Big_Bang_1b/: Big_Bang_1b.bb
_release/samples/Richard_Betson/Power_fountain_b/: power_fountian_b.bb
_release/samples/Richard_Betson/emerald_gate/: Emerald_Gate_1.bb
_release/samples/RobHutchinson/BloxAndSpheres/: blox&spheres.bb
_release/samples/RobHutchinson/CraftFlare/: CraftFlare.bb
_release/samples/Skully/: start.bb
_release/samples/benchmark/: benchmark.bb
_release/samples/mak/: start.bb
_release/samples/oop/: README.md  test_inheritance.bb  test_inheritance_result.txt  test_multi_inheritance.bb  test_multi_result.txt  test_super.bb  test_super_result.txt
android/: .gitignore  README.md  build.gradle  gradle.properties  local.properties.template  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  main.cpp
android/gradle/wrapper/: gradle-wrapper.properties
docs/: OOP.md  come correggere esempi.md
src/: config.h
src/runtime/: CMakeLists.txt  exports.map
src/runtime/opengl/: CMakeLists.txt
src/runtime/test/: CMakeLists.txt
src/stdutil/: stdutil.cpp  stdutil.h
src/tools/: CMakeLists.txt
src/tools/blitzide2/: BlitzCC.cpp  BlitzCC.h  BuildDialog.cpp  BuildDialog.h  CMakeLists.txt  FileView.cpp  FileView.h  HtmlHelp.cpp  MainFrame.cpp  MainFrame.h  main.cpp
src/tools/compiler/: CMakeLists.txt  bundle.h  environ.cpp  environ.h  libs.cpp  main.cpp
src/tools/docgen/: CMakeLists.txt  docgen.cpp
(+209 files in other folders)
